# blob-indexer

./: .env.example  Dockerfile  README.md  pyproject.toml
blob_sync/: azure_ai_search.py  azure_document_intelligence.py  blob.py  config.py  gpt_vision.py  search.py  sync.py
tests/: test_blob_integration.py
